--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@ PLS ask for permission & add a link to this website before you directly copy and
   <br><br><a href="https://www.sutd.edu.sg/profile/zhang-wenxuan">Faculty Page</a> | <a href="https://scholar.google.com/citations?user=tr7MWA4AAAAJ&hl=en">Google Scholar</a> | <a href="https://www.linkedin.com/in/wenxuan-zhang-608b88153/">LinkedIn</a> | <a href="https://x.com/Wenxuan__Zhang">X (Twitter)</a> | <a href="https://www.zhihu.com/people/jun-moer">Zhihu</a>
 
   <br><br>
-  
   <!-- 
   <br>Quick jumps: [<a href="#bio">Short Bio</a>] [<a href="#pub">Publications</a>] [<a href="#awards">Honors</a>] [<a href="#professional">Service</a>] [<a href="#teaching">Teaching&Talk</a>]
   -->
@@ -82,7 +81,7 @@ PLS ask for permission & add a link to this website before you directly copy and
   <!--end of Navigation bar-->
   
   <h3><a name="bio"></a>About me <font size="4.5">[<a href="./bio.html">Short bio</a>]</font></h3>
-  I am currently a tenure-track Assistant Professor at the Information Systems Technology and Design (ISTD) pillar, Singapore University of Technology and Design (SUTD), under the prestigious "<a href=https://www.sutd.edu.sg/about/careers/assistant-professorships/sutd-assistant-professorships>SUTD Assistant Professorship (SAP)</a>" scheme (a competitive research award for early-career faculty). Before this, I was a research scientist at <a href="https://www.alibabagroup.com/en-US/">Alibaba Group Singapore</a>. I received my Ph.D. from <a href="https://www.cuhk.edu.hk/">The Chinese University of Hong Kong</a>.
+  I am currently a tenure-track Assistant Professor at the Information Systems Technology and Design (ISTD) Pillar, Singapore University of Technology and Design (SUTD), under the prestigious "<a href=https://www.sutd.edu.sg/about/careers/assistant-professorships/sutd-assistant-professorships>SUTD Assistant Professorship (SAP)</a>" scheme (a competitive research award for early-career faculty). Before this, I was a research scientist at <a href="https://www.alibabagroup.com/en-US/">Alibaba Group Singapore</a>. I received my Ph.D. from <a href="https://www.cuhk.edu.hk/">The Chinese University of Hong Kong</a>.
   <!-- , where I was advised by <a href="http://www1.se.cuhk.edu.hk/~textmine/">Prof. Wai Lam</a>.-->
 
   <br><br>My research interests lie broadly in natural language processing and machine learning, though most of my research are centered around large language models these days. 
@@ -109,7 +108,7 @@ PLS ask for permission & add a link to this website before you directly copy and
     <!-- <li> Sentiment and opinion understanding: how well do LLMs understand human's subjective feeling </li> -->
   </ul>
 
-  📍<span style="color:orangered;">Openings:</span> I'm actively looking for self-motivated students to join us, please check <a href="https://isakzhang.github.io/getinvolved.html">how to get invovled</a>.
+  📍<span style="color:orangered;">Openings: We have multiple fully-funded positions (Postdoc / PhD / Visiting) available — see <a href="https://isakzhang.github.io/getinvolved.html">[details]</a>. Feel free to email me if you're interested. Students with relevant research or publication experience will be preferred.</span>
 
 
   <h3 id="news">News</h3>
@@ -179,7 +178,7 @@ PLS ask for permission & add a link to this website before you directly copy and
 
 
 <div id='footer'>
-  <p style="text-align:center;">Last updated: Feb 2025</p>
+  <p style="text-align:center;">Last updated: Apr 2025</p>
 </div>
 
 </body>
