--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ PLS ask for permission & add a link to this website before you directly copy and
 
   <title> Wenxuan Zhang's Homepage </title>
   <!-- link rel="icon" href="images/nlp_logo.jpg" / -->
-  <meta name="author" content="Wenxuan Zhang">
+  <meta name="author" content="Phan Nguyen">
   <meta name="keywords" content="Wenxuan Zhang, 张雯轩, Wenxuan Zhang CUHK, Isaac, NLP, Wenxuan Zhang Isaac">
   <meta name="robots" content="index,follow">
   <meta name="description" content="Homepage of Wenxuan Zhang">
@@ -37,7 +37,7 @@ PLS ask for permission & add a link to this website before you directly copy and
   <div class="home">
 
   <div class="mini-intro">
-  <img class="avatar" src="img/wxzhang-2025-square.jpg" alt="wxzhang-photo">
+  <img class="avatar" src="img\Phan_sgp.jpg" alt="wxzhang-photo">
 
   <h1 id="wxzhang">Wenxuan Zhang <span style="font-family:STFangsong">(张雯轩)</span></h1>
   
