--- a/index.html
+++ b/index.html
@@ -2,20 +2,19 @@
 <html lang="en">
 
 <!-- 
-The design of this website is based on https://nlp.stanford.edu/~johnhew/ and modified by Wenxuan Zhang (isakzhang AT gmail).
-PLS ask for permission & add a link to this website before you directly copy and apply to yours 
+The design of this website is based on https://nlp.stanford.edu/~johnhew/ and Wenxuan Zhang (isakzhang AT gmail).
 -->
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title> Wenxuan Zhang's Homepage </title>
+  <title> Phan's Homepage </title>
   <!-- link rel="icon" href="images/nlp_logo.jpg" / -->
   <meta name="author" content="Phan Nguyen">
-  <meta name="keywords" content="Wenxuan Zhang, 张雯轩, Wenxuan Zhang CUHK, Isaac, NLP, Wenxuan Zhang Isaac">
+  <meta name="keywords" content="Phan Nguyen, Nguyễn Hòa Phan, Phan Nguyen KAIST, Nguyen Hoa Phan">
   <meta name="robots" content="index,follow">
-  <meta name="description" content="Homepage of Wenxuan Zhang">
+  <meta name="description" content="Homepage of Phan">
   <link rel="stylesheet" href="./styles.css">
   <link href='https://fonts.googleapis.com/css?family=PT+Serif:400,700,400italic' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -29,6 +28,12 @@ PLS ask for permission & add a link to this website before you directly copy and
     gtag('js', new Date());
     gtag('config', 'UA-134238626-1');
   </script>
+
+  <!-- <style>
+    .hidden-content {
+        display: none;
+    }
+  </style> -->
 </head>
 
 <body>
@@ -37,17 +42,19 @@ PLS ask for permission & add a link to this website before you directly copy and
   <div class="home">
 
   <div class="mini-intro">
-  <img class="avatar" src="img\Phan_sgp.jpg" alt="wxzhang-photo">
+  <img class="avatar" src="img\Phan_sgp.jpg" alt="phan-photo">
 
-  <h1 id="wxzhang">Wenxuan Zhang <span style="font-family:STFangsong">(张雯轩)</span></h1>
+  <h1 id="nhphan">Phan Nguyen <span style="font-family:STFangsong">(Nguyễn Hòa Phan)</span></h1>
   
-  <code class="language-plaintext highlighter-rouge">wxzhang [at] sutd.edu.sg</code>
+  <code class="language-plaintext highlighter-rouge">nhphan [at] kaist.ac.kr</code>
   <br>
-  <br>SUTD Assistant Professor
-  <br>Information Systems Technology and Design (ISTD) Pillar
-  <br>Singapore University of Technology and Design
-
-  <br><br><a href="https://www.sutd.edu.sg/profile/zhang-wenxuan">Faculty Page</a> | <a href="https://scholar.google.com/citations?user=tr7MWA4AAAAJ&hl=en">Google Scholar</a> | <a href="https://www.linkedin.com/in/wenxuan-zhang-608b88153/">LinkedIn</a> | <a href="https://x.com/Wenxuan__Zhang">X (Twitter)</a> | <a href="https://www.zhihu.com/people/jun-moer">Zhihu</a>
+  <br>Undergraduate Student
+  <br>School of Computing
+  <br>Department of Industrial & Systems Engineering
+  <br>Korea Advanced Institute of Science and Technology (KAIST)
+  
+  
+  <br><br><a href="https://www.linkedin.com/in/phannguyen2809/" target="_blank">LinkedIn</a> | <a href="https://www.facebook.com/phan.nguyen.2809/" target="_blank">Facebook</a> | <a href="https://codeforces.com/profile/cunhenry01" target="_blank">Codeforces</a>
 
   <br><br>
   <!-- 
@@ -63,7 +70,7 @@ PLS ask for permission & add a link to this website before you directly copy and
       <a href="research.html">Publications</a>
     </div>
     <div>
-      <a href="getinvolved.html">Getting Invovled</a>
+      <a>Fun</a>
     </div>
     <script>
       $(function () {
@@ -79,16 +86,62 @@ PLS ask for permission & add a link to this website before you directly copy and
     </script>
   </div>
   <!--end of Navigation bar-->
-  
-  <h3><a name="bio"></a>About me <font size="4.5">[<a href="./bio.html">Short bio</a>]</font></h3>
-  I am currently a tenure-track Assistant Professor at the Information Systems Technology and Design (ISTD) Pillar, Singapore University of Technology and Design (SUTD), under the prestigious "<a href=https://www.sutd.edu.sg/about/careers/assistant-professorships/sutd-assistant-professorships>SUTD Assistant Professorship (SAP)</a>" scheme (a competitive research award for early-career faculty). Before this, I was a research scientist at <a href="https://www.alibabagroup.com/en-US/">Alibaba Group Singapore</a>. I received my Ph.D. from <a href="https://www.cuhk.edu.hk/">The Chinese University of Hong Kong</a>.
-  <!-- , where I was advised by <a href="http://www1.se.cuhk.edu.hk/~textmine/">Prof. Wai Lam</a>.-->
 
-  <br><br>My research interests lie broadly in natural language processing and machine learning, though most of my research are centered around large language models these days. 
-  I am passinate to advance NLP models that are <strong>inclusive</strong>, supporting diverse languages and cultures (e.g., multilingual large language models), while also <strong>trustworthy</strong> through techniques that improve understanding, safety and robustness of language models. 
-  <!--I am passionate about ensuring NLP benefits people equally by making systems accessible, controllable and reliable.-->
 
-  <br><br>Current and Planned Research Projects (more on <a href="https://isakzhang.github.io/research.html">research page</a>):
+  <h3>About me</h3>
+  <!-- <h3><a name="bio"></a>About me <font size="4.5">[<a href="./bio.html">Short bio</a>]</font></h3> -->
+  I am currently a third-year undergraduate student at KAIST, double major in Computer Science and Industrial Systems Engineering.
+
+  <br><br>My research interests lie broadly in natural language processing, computer vision, and optimization.
+  I am in the process of exploring my research direction and am open to new and specific topics in related areas.
+
+  <h3 id="news">News</h3>
+  <!-- (<i>I have to admit this section doesn't get updated as often as my <a href="https://www.linkedin.com/in/wenxuan-zhang-608b88153/">social media</a> accounts do</i>) -->
+  <div style="max-height: 300px; overflow-y: auto;">
+    <ul>
+      <li>[Sep 2025] I have started my research internship at Taipei Medical University</li>
+      <li>[Jun 2025] I have started my research internship at Shanghai Jiao Tong University</li>
+      <li>[Nov 2024] Our team got Gold Medal at ICPC Asia Taichung Regional</li>
+    </ul>
+  </div>
+
+  <h3><a name ="education"></a>Education</h3>
+  <ul>
+    <li>[2023.08 - Present] B.S. in Computer Science and Industrial Systems Engineering, <strong>Korea Advanced Institute of Science and Technology (KAIST)</strong>, Daejeon, South Korea</li>
+    <li>[2018.06 - 2021.06] High School Diploma, Mathematics Class, <strong>Quoc Hoc Hue High School for Gifted Students</strong>, Thue Thien Hue, Vietnam</li>
+  </ul>
+
+  <h3><a name="experience"></a>Research Experience</h3>
+  <ul>
+    <li>[2025.09 - 2026.01] Research Intern, <strong>AIBioMed Research Group, Taipei Medical University</strong>, Taipei, Taiwan</li>
+    <li>[2025.06 - 2025.08] Research Intern, <strong>National Engineering Laboratory for Information Content Analysis Technology, Shanghai Jiao Tong University</strong>, Shanghai, China</li>
+  </ul>
+
+  <h3><a name="awards"></a>Selected Honors & Awards</h3>
+  <ul>
+    <li>31st Place, ICPC Asia Pacific Championship 2025 (compete with 2 members)</li>
+    <li>Gold Medal, ICPC Asia Taichung Regional Contest 2024</li>
+    <li>Third Prize, Vietnam National Math Olympiad (VMO) 2020</li>
+    <li>Valedictorian, Quoc Hoc Hue HSGS Entrance Exam</li>
+  </ul>
+
+
+  <h3><a name="professional"></a>Professional Service</h3>
+  <ul>
+    <li>Volunteer: ABU Robocon 2024</li>
+  </ul>
+
+
+<div id='footer'>
+  <p style="text-align:center;">Last updated: June 2025</p>
+</div>
+
+</body>
+
+</html>
+
+
+  <!-- <br><br>Current and Planned Research Projects (more on <a href="https://isakzhang.github.io/research.html">research page</a>):
   <ul>
     <li>
       [<span style="color:royalblue;">Multilingual</span>] Understanding and enhancing multilingual capabilities of LLMs (<a href="https://damo-nlp-sg.github.io/SeaLLMs/">SeaLLMs</a>, <a href="https://babel-llm.github.io/babel-llm//">Babel</a>)
@@ -105,82 +158,9 @@ PLS ask for permission & add a link to this website before you directly copy and
     <li> 
       [<span style="color:royalblue;">Mechanism</span>] Understaning what is happening inside LLMs (<a href="">Knowledge</a> & <a href="">Reasoning</a>) 
     </li>
-    <!-- <li> Sentiment and opinion understanding: how well do LLMs understand human's subjective feeling </li> -->
-  </ul>
+  </ul> -->
 
-  📍<span style="color:orangered;">Openings: We have multiple fully-funded positions (Postdoc / PhD / Visiting) available — see <a href="https://isakzhang.github.io/getinvolved.html">[details]</a>. Feel free to email me if you're interested. Students with relevant research or publication experience will be preferred.</span>
-
-
-  <h3 id="news">News</h3>
-  (<i>I have to admit this section doesn't get updated as often as my <a href="https://www.linkedin.com/in/wenxuan-zhang-608b88153/">social media</a> accounts do</i>)
-  <div style="max-height: 300px; overflow-y: auto;">
-    <ul>
-      <li>[Apr 2025] I was interviewed at AIMX Podcast to share my thoughts on various topics of multilingual LLMs, also got the chance to share SeaLLMs-Audio and Babel project, <a href="https://open.spotify.com/episode/5BKRSUdU1jh3dGzCVeEUf7">check it out on Spotify</a>!
-      <li>[Mar 2025] I will serve as an area chair for COLM 2025 and NeurIPS 2025
-      <li>[Mar 2025] 🔥 We release <a href="https://damo-nlp-sg.github.io/SeaLLMs-Audio/">SeaLLMs-Audio</a> - the multimodal (audio) extension of SeaLLMs and the first large audio-language model designed to support multiple Southeast Asian languages!
-      <li>[Mar 2025] 🔥 We release <a href="https://babel-llm.github.io/babel-llm//">Babel</a> - open-source multilingual LLMs that serve over 90% of global speakers. Two sizes of models (9B and 83B) have been released, both base and chat versions are open-sourced!
-      <li>[Feb 2025] I officially joined SUTD!
-      <li>[Jan 2025] Thrilled to receive the prestigious "<a href="https://www.sutd.edu.sg/about/careers/assistant-professorships/sutd-assistant-professorships">SUTD Assistant Professorship (SAP)</a>" award</li>
-      <li>[Oct 2024] Glad to be invited to give a keynote talk at SSNLP 2024.</li>
-      <li>[Aug 2024] I will serve as an Area Chair for ICLR 2025</li>
-      <li>[July 2024] <a href="https://huggingface.co/collections/SeaLLMs/seallms-v3-668f3a52e1e6fbaad5752cdb">SeaLLMs 3</a> is here - the latest iteration of SeaLLMs with SOTA performance of diverse tasks while specifically enhanced to be more trustworthy. Check out the <a href="https://huggingface.co/collections/SeaLLMs/seallms-v3-668f3a52e1e6fbaad5752cdb">model</a> and <a href="https://arxiv.org/abs/2407.19672">paper</a>!</li>
-      <li>[June 2024] SeaLLMs was awarded the <i>"Best Innovate for Impact Award"</i> by The International Telecommunication Union (ITU) of United Nations.</li>
-      <li>[May 2024] M3Exam was officialy used to <a href="https://openai.com/index/hello-gpt-4o/">evaluate GPT-4o's multilingual and multimodal capability</a>.</li>
-      <li>[Apr 2024] I am honored to speak at SCS and IMDA about our SeaLLMs project and the evaluation / safety measures we've implemented during the development. </li>
-      <!--<li>[Jan 2024] Two papers accepted to ICLR 2024: <a href="https://arxiv.org/abs/2310.06474">multilingual jailbreak challenge</a> & <a href="https://arxiv.org/abs/2311.00262">plug-and-play policy planner for LLM-based dialog agent.</a></li>-->
-      <li>[Nov 2023] We release <a href="https://github.com/DAMO-NLP-SG/SeaLLMs">SeaLLMs</a> - the first LLM dedicated to languages in Southeast Asia region.</li>
-      <!--
-      <li><span style="color:#B08519">[Sep 2023]</span> Two papers accepted to NeurIPS 2023.</li>
-      <li><span style="color:#B08519">[June 2023]</span> We release <strong>M3Exam</strong>, a novel benchmark sourced from real and official human exam questions for evaluating LLMs in a multilingual, multimodal, and multilevel context. <a href="https://arxiv.org/pdf/2306.05179.pdf">[paper]</a> <a href="https://github.com/DAMO-NLP-SG/M3Exam">[data]</a></li>
-      <li><span style="color:#B08519">[May 2023]</span> We conducted a reality check on current large language models for various sentiment analysis tasks, the <a href="https://arxiv.org/abs/2305.15005">paper</a> is available on arXiv now.</li> -->
-      <!-- <li><span style="color:#B08519">[Apr 2023]</span> Our tutorial "Sentiment Analysis and Beyond in the Era of Enlarged Language Models" was accepted to IJCAI-2023. Check it <a href="https://isakzhang.github.io/talks/ijcai23-sentiment-tutorial.html">here</a>!</li> -->
-    </ul>
-  </div>
-
-
-  <h3><a name="awards"></a>Selected Honors & Awards</h3>
-  <ul>
-    <li> <a href="https://www.sutd.edu.sg/about/careers/assistant-professorships/sutd-assistant-professorships">SUTD Assistant Professorship</a> (SAP) award, 2025</li>
-    <li> Alibaba Star (阿里星), Alibaba Group, 2022</li>
-    <li> National Scholarship, MoE of China, 2017</li>
-    <li> National Cyber Security Scholarship (<i>Only <span style="color:#B08519">100</span> undergraduates in China are awarded every year</i>), 2017</li>
-    <li> National Scholarship, MoE of China, 2016</li>
-  </ul>
-
-
-  <h3><a name="professional"></a>Professional Service</h3>
-  <ul>
-    <li> Organizing Committee: SSNLP 2025 </li>
-    <li> Area Chair: NeurIPS 2025, ACL 2025, COLM 2025, ICLR 2025, NAACL 2025, EMNLP 2024 </li>
-    <li> Regular PC Member (or Reviewer): ACL, EMNLP, ACL Rolling Review, COLING; NeurIPS, ICML, AAAI, IJCAI; SIGKDD, WWW, WSDM
-    <li> Journal Reviewer: Computational Linguistics (CL), ACM Transactions on Information Systems (TOIS), IEEE Transactions on Knowledge and Data Engineering (TKDE), ACM Transactions on the Web (TWEB), Neurocomputing, Transactions on Audio, Speech and Language Processing (TASLP) </li>
-  </ul>
-
-  <h3><a name="talks"></a>Invited Talks</h3>
-  <ul>
-    <li>Nov 2024: invited keynote talk at <a href="https://wing-nus.github.io/SSNLP-2024/">SSNLP 2024</a></li>
-    <li>Oct 2024: invited talk and panel discussion at <a href="https://www.switchsg.org/">Singapore Week of Innovation Technology (SWITCH) 2024</a></li>
-    <li>July 2024: invited keynote talk at <a href="https://kdd.sg/singapore-acm-sigkdd-symposium-2024/">Singapore ACM SIGKDD Symposium 2024</a>.</li>
-    <li>Apr 2024: invited talk on the SeaLLMs project at <a href="https://www.scs.org.sg/events/details/transforming-analytics-with-gen-ai-and-site-visit-to-ibm">Singapore Computer Society (SCS)</a>
-    <li> Apr 2024: invited talk at <a href="https://www.imda.gov.sg/activities/activities-catalogue/technical-sharing-session-on-ai-safety"> Infocomm Media Development Authority (IMDA)</a> of Singapore</li>
-    <li> Sep 2023: invited talk on M3Exam at multilingual & multimodal LLMs session of <a href="http://mlnlp.world/mlnlp2023/">MLNLP 2023</a></li>
-    <li> Aug 2023: half-day tutorial "<a href="https://isakzhang.github.io/talks/ijcai23-sentiment-tutorial.html">Sentiment Analysis in the Era of LLMs</a>" at IJCAI 2023. [<a href="https://docs.google.com/presentation/d/1fjH6ZxfCPtJPI1eU8eqhG9qdS1w3DPwxrYG6-SRmCMU/edit?usp=sharing">slides</a>]</li>
-    <li> Mar 2023: invited talk "A Survey on Aspect-Based Sentiment Analysis" at <a href="https://s3a.sentic.net/">Singapore Symposium
-      on Sentiment Analysis (S3A)</a>.</li>
-    <!--
-    <li> Guest lecture "<i>Neural models for text</i>" for SEEM5680 Text Mining Models and Applications at CUHK</li>
-    <li> TA for ECLT5810 E-Commerce Data Mining Technique (for Msc, 2018-19 Spring, 2020-2021 Spring) </li>
-    <li> TA for SEEM3440 Operations Research II (for UG, 2020 Fall)</li>
-    <li> TA for SEEM3460/ESTR3504 Computer Processing System Concepts (for UG, 2018-19 Fall, 2019-2020 Fall, 2020-2021 Fall)</li>
-    -->
-  </ul>
-</div>
-
-
-<div id='footer'>
-  <p style="text-align:center;">Last updated: Apr 2025</p>
-</div>
-
-</body>
-
-</html>
+  <!-- 📍<span style="color:orangered;">Openings: We have multiple fully-funded positions (Postdoc / PhD / Visiting) available
+     — see <a href="https://isakzhang.github.io/getinvolved.html">[details]</a>. 
+    Feel free to email me if you're interested. 
+    Students with relevant research or publication experience will be preferred.</span> -->
