--- a/index.html
+++ b/index.html
@@ -130,37 +130,12 @@ The design of this website is based on https://nlp.stanford.edu/~johnhew/ and We
   <ul>
     <li>Volunteer: ABU Robocon 2024</li>
   </ul>
-
-
-<div id='footer'>
-  <p style="text-align:center;">Last updated: June 2025</p>
 </div>
+
+  <div id='footer'>
+    <p style="text-align:center;">Last updated: June 2025</p>
+  </div>
 
 </body>
 
 </html>
-
-
-  <!-- <br><br>Current and Planned Research Projects (more on <a href="https://isakzhang.github.io/research.html">research page</a>):
-  <ul>
-    <li>
-      [<span style="color:royalblue;">Multilingual</span>] Understanding and enhancing multilingual capabilities of LLMs (<a href="https://damo-nlp-sg.github.io/SeaLLMs/">SeaLLMs</a>, <a href="https://babel-llm.github.io/babel-llm//">Babel</a>)
-    </li>
-    <li> 
-      [<span style="color:royalblue;">Accessiblity</span>] Making LLMs more accessible, through model compression or model collaboration
-    </li>
-    <li> 
-      [<span style="color:royalblue;">Safety</span>] Ensuring safety of LLMs from development to deployment (<a href="https://arxiv.org/abs/2310.06474">MultiJail</a>, <a href="https://openreview.net/forum?id=yR47RmND1m">Safety Neuron</a>)
-    </li>
-    <li> 
-      [<span style="color:royalblue;">Evaluation</span>] Comprehensive and fair evaluation of foundation models (<a href="https://arxiv.org/pdf/2306.05179.pdf">M3Exam</a>, <a href="https://auto-arena.github.io/">Auto-Arena</a>)
-    </li>
-    <li> 
-      [<span style="color:royalblue;">Mechanism</span>] Understaning what is happening inside LLMs (<a href="">Knowledge</a> & <a href="">Reasoning</a>) 
-    </li>
-  </ul> -->
-
-  <!-- 📍<span style="color:orangered;">Openings: We have multiple fully-funded positions (Postdoc / PhD / Visiting) available
-     — see <a href="https://isakzhang.github.io/getinvolved.html">[details]</a>. 
-    Feel free to email me if you're interested. 
-    Students with relevant research or publication experience will be preferred.</span> -->
