--- a/research.html
+++ b/research.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- The design of this website is based on https://nlp.stanford.edu/~johnhew/ and modified by Wenxuan Zhang.
-     PLS ask for permission & add a link to this website before you directly copy and apply to yours -->
+<!-- 
+The design of this website is based on https://nlp.stanford.edu/~johnhew/ and Wenxuan Zhang (isakzhang AT gmail).
+-->
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title> Wenxuan Zhang's Homepage </title>
+  <title> Phan's Homepage </title>
   <!-- link rel="icon" href="images/nlp_logo.jpg" / -->
-  <meta name="author" content="Wenxuan Zhang">
-  <meta name="keywords" content="Wenxuan Zhang, 张雯轩, Wenxuan Zhang CUHK, Isaac, NLP, Wenxuan Zhang Isaac">
+  <meta name="author" content="Phan Nguyen">
+  <meta name="keywords" content="Phan Nguyen, Nguyễn Hòa Phan, Phan Nguyen KAIST, Nguyen Hoa Phan">
   <meta name="robots" content="index,follow">
-  <meta name="description" content="Homepage of Wenxuan Zhang">
+  <meta name="description" content="Homepage of Phan">
   <link rel="stylesheet" href="./styles.css">
   <link href='https://fonts.googleapis.com/css?family=PT+Serif:400,700,400italic' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -25,10 +26,14 @@
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-
     gtag('config', 'UA-134238626-1');
   </script>
 
+  <!-- <style>
+    .hidden-content {
+        display: none;
+    }
+  </style> -->
 </head>
 
 <body>
@@ -37,21 +42,22 @@
   <div class="home">
 
   <div class="mini-intro">
-  <img class="avatar" src="img/wxzhang-2025-square.jpg" alt="wxzhang-photo">
+  <img class="avatar" src="img\Phan_sgp.jpg" alt="phan-photo">
 
-  <h1 id="wxzhang">Wenxuan Zhang <span style="font-family:STFangsong">(张雯轩)</span></h1>
+  <h1 id="nhphan">Phan Nguyen <span style="font-family:STFangsong">(Nguyễn Hòa Phan)</span></h1>
   
-  <code class="language-plaintext highlighter-rouge">wxzhang [at] sutd.edu.sg</code>
+  <code class="language-plaintext highlighter-rouge">nhphan [at] kaist.ac.kr</code>
   <br>
-  <br>SUTD Assistant Professor
-  <br>Information Systems Technology and Design (ISTD) Pillar
-  <br>Singapore University of Technology and Design
-
-  <br><br><a href="https://www.sutd.edu.sg/profile/zhang-wenxuan">Faculty Page</a> | <a href="https://scholar.google.com/citations?user=tr7MWA4AAAAJ&hl=en">Google Scholar</a> | <a href="https://www.linkedin.com/in/wenxuan-zhang-608b88153/">LinkedIn</a> | <a href="https://x.com/Wenxuan__Zhang">X (Twitter)</a> | <a href="https://www.zhihu.com/people/jun-moer">Zhihu</a>
+  <br>Undergraduate Student
+  <br>School of Computing
+  <br>Department of Industrial & Systems Engineering
+  <br>Korea Advanced Institute of Science and Technology (KAIST)
+  
+  
+  <br><br><a href="https://www.linkedin.com/in/phannguyen2809/" target="_blank">LinkedIn</a> | <a href="https://www.facebook.com/phan.nguyen.2809/" target="_blank">Facebook</a> | <a href="https://codeforces.com/profile/cunhenry01" target="_blank">Codeforces</a>
 
   <br><br>
-
-    <!-- 
+  <!-- 
   <br>Quick jumps: [<a href="#bio">Short Bio</a>] [<a href="#pub">Publications</a>] [<a href="#awards">Honors</a>] [<a href="#professional">Service</a>] [<a href="#teaching">Teaching&Talk</a>]
   -->
 
@@ -64,7 +70,7 @@
       <a href="research.html">Publications</a>
     </div>
     <div>
-      <a href="getinvolved.html">Getting Invovled</a>
+      <a>Fun</a>
     </div>
     <script>
       $(function () {
@@ -100,16 +106,7 @@
         [<a href="https://arxiv.org/abs/2405.20267">paper</a>] [<a href="https://auto-arena.github.io/">project page</a>]
       </li>
       <p> </p>
-  
-      <!--
-      <li>
-        <div id="text" style = "color:#1f57b8">JsonTuning: Towards Generalizable, Robust, and Controllable Instruction Tuning</div>
-        Chang Gao, <strong>Wenxuan Zhang☨</strong>, Guizhen Chen, Wai Lam
-        <br>arXiv:2310.02953
-        [<a href="https://arxiv.org/abs/2310.02953">paper</a>] [<a href="https://github.com/gao-xiao-bai/JsonTuning">data&code</a>]
-      </li>
-      <p> </p>
-      -->
+
     </ul>
 
   <h3><a name="pub"></a>Selected Publications<font size="4.5"> [<a href="https://scholar.google.com/citations?user=tr7MWA4AAAAJ&hl=en">Google Scholar</a>]</font></h3> 
