--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ The design of this website is based on https://nlp.stanford.edu/~johnhew/ and We
 
   <h3>About me</h3>
   <!-- <h3><a name="bio"></a>About me <font size="4.5">[<a href="./bio.html">Short bio</a>]</font></h3> -->
-  I am currently a third-year undergraduate student at KAIST, double major in Computer Science and Industrial Systems Engineering.
+  I am currently a third-year undergraduate student at KAIST, double-majoring in Computer Science and Industrial Systems Engineering.
 
   <br><br>My research interests lie broadly in natural language processing, computer vision, and optimization.
   I am in the process of exploring my research direction and am open to new and specific topics in related areas.
