--- a/fun.html
+++ b/fun.html
@@ -88,53 +88,58 @@ The design of this website is based on https://nlp.stanford.edu/~johnhew/ and We
   <!--end of Navigation bar-->
 
 
-  <h3>About me</h3>
-  <!-- <h3><a name="bio"></a>About me <font size="4.5">[<a href="./bio.html">Short bio</a>]</font></h3> -->
-  I am currently a third-year undergraduate student at KAIST, double-majoring in Computer Science and Industrial Systems Engineering.
+<!-- Hobbies -->
+<h2>Hobbies</h2>
+I enjoy competitive programming in my free time. You can also reach me on <a href="https://codeforces.com/profile/cunhenry01" target="_blank">Codeforces</a>.
 
-  <br><br>My research interests lie broadly in natural language processing, computer vision, and optimization.
-  I am in the process of exploring my research direction and am open to new and specific topics in related areas.
+<br><br>I watch about one K-drama film per month, mostly romances (<a href="https://www.youtube.com/watch?v=gxJy-Q8xUEE" target="_blank">Our Beloved Summer</a> is the GOAT for me). My favorite actresses are Park Boyoung, Kim Jiwon and Kim Dami.
 
-  <h3 id="news">News</h3>
-  <!-- (<i>I have to admit this section doesn't get updated as often as my <a href="https://www.linkedin.com/in/wenxuan-zhang-608b88153/">social media</a> accounts do</i>) -->
-  <div style="max-height: 300px; overflow-y: auto;">
-    <ul>
-      <li>[Sep 2025] I have started my research internship at Taipei Medical University</li>
-      <li>[Jun 2025] I have started my research internship at Shanghai Jiao Tong University</li>
-      <li>[Nov 2024] Our team got Gold Medal at ICPC Asia Taichung Regional</li>
-    </ul>
-  </div>
-
-  <h3><a name ="education"></a>Education</h3>
-  <ul>
-    <li>[2023.08 - Present] B.S. in Computer Science and Industrial Systems Engineering, <strong>Korea Advanced Institute of Science and Technology (KAIST)</strong>, Daejeon, South Korea</li>
-    <li>[2018.06 - 2021.06] High School Diploma, Mathematics Class, <strong>Quoc Hoc Hue High School for Gifted Students</strong>, Thue Thien Hue, Vietnam</li>
-  </ul>
-
-  <h3><a name="experience"></a>Research Experience</h3>
-  <ul>
-    <li>[2025.09 - 2026.01] Research Intern, <strong>AIBioMed Research Group, Taipei Medical University</strong>, Taipei, Taiwan</li>
-    <li>[2025.06 - 2025.08] Research Intern, <strong>National Engineering Laboratory for Information Content Analysis Technology, Shanghai Jiao Tong University</strong>, Shanghai, China</li>
-  </ul>
-
-  <h3><a name="awards"></a>Selected Honors & Awards</h3>
-  <ul>
-    <li>31st Place, ICPC Asia Pacific Championship 2025 (compete with 2 members)</li>
-    <li>Gold Medal, ICPC Asia Taichung Regional Contest 2024</li>
-    <li>Third Prize, Vietnam National Math Olympiad (VMO) 2020</li>
-    <li>Valedictorian, Quoc Hoc Hue HSGS Entrance Exam</li>
-  </ul>
-
-
-  <h3><a name="professional"></a>Professional Service</h3>
-  <ul>
-    <li>Volunteer: ABU Robocon 2024</li>
-  </ul>
+<br><br>I try to run at least 20 minutes every day to build my endurance. Sometimes I play table tennis or football with friends.
+<div class="image-row">
+  <img src="img/pingpong.jpg" alt="Photo 1">
+  <img src="img/football.jpg" alt="Photo 2">
 </div>
 
-  <div id='footer'>
-    <p style="text-align:center;">Last updated: June 2025</p>
-  </div>
+<br>My dream is to travel around the world. Below are the countries I have visited so far, and and I hope this list will continue to grow.
+<!-- https://www.flaticon.com/search -->
+<ul>
+  <li>
+    Vietnam<img src="flag/vietnam.png" alt="🇻🇳" class="flag-icon">: 
+    My hometown—I have been to around 30 provinces and cities, too many to list.
+  </li>
+  <li>
+    South Korea<img src="flag/korea.png" alt="kr" class="flag-icon">: 
+    Daejeon, Seoul, Busan
+  </li>
+  <li>
+    Singapore<img src="flag/singapore.png" alt="🇸🇬" class="flag-icon">: 
+    ICPC 2025, Travel 2024
+  </li>
+  <li>
+    Taiwan<img src="flag/taiwan.png" alt="tw" class="flag-icon">: 
+    Taipei (TMU Internship), Taichung (ICPC 2024)
+  </li>
+  <li>
+    China<img src="flag/china.png" alt="cn" class="flag-icon">: 
+    Shanghai (SJTU Internship), Wuhan
+  </li>
+  <li>
+    Malaysia<img src="flag/malay.png" alt="ml" class="flag-icon">: 
+    Kuala Lumpur (AJAFA 2022)
+  </li>
+
+
+</ul>
+
+
+<!-- <br><br> -->
+<!-- <h3>Hey</h3> -->
+
+</div>
+
+<div id='footer'>
+  <p style="text-align:center;">Last updated: June 2024</p>
+</div>
 
 </body>
 
