--- a/research.html
+++ b/research.html
@@ -54,7 +54,7 @@ The design of this website is based on https://nlp.stanford.edu/~johnhew/ and We
   <br>Korea Advanced Institute of Science and Technology (KAIST)
   
   
-  <br><br><a href="https://www.linkedin.com/in/phannguyen2809/" target="_blank">LinkedIn</a> | <a href="https://www.facebook.com/phan.nguyen.2809/" target="_blank">Facebook</a> | <a href="https://codeforces.com/profile/cunhenry01" target="_blank">Codeforces</a>
+  <br><br><a href="https://www.linkedin.com/in/phannguyen2809/" target="_blank">LinkedIn</a> | <a href="https://www.facebook.com/phan.nguyen.2809/" target="_blank">Facebook</a>
 
   <br><br>
   <!-- 
@@ -70,7 +70,7 @@ The design of this website is based on https://nlp.stanford.edu/~johnhew/ and We
       <a href="research.html">Publications</a>
     </div>
     <div>
-      <a>Fun</a>
+      <a href="fun.html">Fun</a>
     </div>
     <script>
       $(function () {
