--- a/fun.html
+++ b/fun.html
@@ -100,7 +100,7 @@ I enjoy competitive programming in my free time. You can also reach me on <a hre
   <img src="img/football.jpg" alt="Photo 2">
 </div>
 
-<br>My dream is to travel around the world. Below are the countries I have visited so far, and and I hope this list will continue to grow.
+<br>My dream is to travel around the world. Below are the countries I have visited so far, and I hope this list will continue to grow.
 <!-- https://www.flaticon.com/search -->
 <ul>
   <li>
@@ -128,8 +128,16 @@ I enjoy competitive programming in my free time. You can also reach me on <a hre
     Kuala Lumpur (AJAFA 2022)
   </li>
 
-
 </ul>
+
+<h2>Sharing</h2>
+Some materials that I have. Feel free to use it.
+<h3>Courses at KAIST</h3>
+<ul>
+  <li>IE203 Something</li>
+</ul>
+<h3>GRE</h3>
+Abc xyz
 
 
 <!-- <br><br> -->
