--- a/fun.html
+++ b/fun.html
@@ -109,11 +109,11 @@ I enjoy competitive programming in my free time. You can also reach me on <a hre
   </li>
   <li>
     South Korea<img src="flag/korea.png" alt="kr" class="flag-icon">: 
-    Daejeon, Seoul, Busan
+    Daejeon (B.S. KAIST), Seoul, Busan
   </li>
   <li>
     Singapore<img src="flag/singapore.png" alt="🇸🇬" class="flag-icon">: 
-    ICPC 2025, Travel 2024
+    ICPC 2025, SIMOC 2024 (guest)
   </li>
   <li>
     Taiwan<img src="flag/taiwan.png" alt="tw" class="flag-icon">: 
@@ -131,7 +131,7 @@ I enjoy competitive programming in my free time. You can also reach me on <a hre
 </ul>
 
 <h2>Sharing</h2>
-Some materials that I have. Feel free to use it.
+Here are some materials that I have/collect. Feel free to use them.
 <h3>Courses at KAIST</h3>
 <ul>
   <li>IE203 Something</li>
