--- a/fun.html
+++ b/fun.html
@@ -130,7 +130,7 @@ I enjoy competitive programming in my free time. You can also reach me on <a hre
 
 </ul>
 
-<h2>Sharing</h2>
+<h2>Resources</h2>
 Here are some materials that I have/collect. Feel free to use them.
 <h3>Courses at KAIST</h3>
 <ul>
