--- a/fun.html
+++ b/fun.html
@@ -134,7 +134,12 @@ I enjoy competitive programming in my free time. You can also reach me on <a hre
 Here are some materials that I have/collect. Feel free to use them.
 <h3>Courses at KAIST</h3>
 <ul>
-  <li>IE203 Something</li>
+  <li>
+    <a href="https://mhsung.github.io/kaist-cs492d-fall-2024/" target="_blank">CS492(D) Diffusion Models and Their Applications</a>
+  </li>
+  <li>
+    <a href="https://dabeenl.github.io/IE331_2023" target="_blank">IE 331 Operations Research: Optimization</a>
+  </li>
 </ul>
 <h3>GRE</h3>
 Abc xyz
