--- a/index.html
+++ b/index.html
@@ -107,8 +107,13 @@ The design of this website is based on https://nlp.stanford.edu/~johnhew/ and We
 
   <h3><a name ="education"></a>Education</h3>
   <ul>
-    <li>[2023.08 - Present] B.S. in Computer Science and Industrial Systems Engineering, <strong>Korea Advanced Institute of Science and Technology (KAIST)</strong>, Daejeon, South Korea</li>
-    <li>[2018.06 - 2021.06] High School Diploma, Mathematics Class, <strong>Quoc Hoc Hue High School for Gifted Students</strong>, Thue Thien Hue, Vietnam</li>
+    <!-- <li>[2023.08 - Present] B.S. in Computer Science and Industrial Systems Engineering, <strong>Korea Advanced Institute of Science and Technology (KAIST)</strong>, Daejeon, South Korea</li> -->
+    <!-- <li>[2018.06 - 2021.06] High School Diploma, Mathematics Class, <strong>Quoc Hoc Hue High School for Gifted Students</strong>, Thue Thien Hue, Vietnam</li> -->
+    <li>
+      <strong>Korea Advanced Institute of Science and Technology (KAIST)</strong>
+      <br><i>B.S. in Computer Science and Industrial Systems Engineering</i>
+      <br><i>2023.08 - Present, Daejeon, South Korea</i>
+    </li>
   </ul>
 
   <h3><a name="experience"></a>Research Experience</h3>
